# medical-imaging

./: .gitignore  .python-version  1  FSDP_mnist.py  copilot.sh  create_summaries.py  data_report.py  extract_data.py  memory-stats.json  notes.txt  private_script.py  private_script_short.py  process_data.py  pyproject.toml  requirements.txt  script.py  script_activations.py  script_plot.py  slurm-23538736.out  t.tfm  test-copilot.py  test.json  test.py  test.sh  test.slurm  test_this.py  testing-32.csv  testing-64.csv  tf_conv_test.py  trace.json  train_lung250m_4b_222.py  utils.py
.claude/: settings.local.json
lightning_logs/version_0/: events.out.tfevents.1627893930.thebeast.5890.0
lightning_logs/version_1/: events.out.tfevents.1627894236.thebeast.7680.0
lightning_logs/version_2/: events.out.tfevents.1627894255.thebeast.7910.0
lightning_logs/version_3/: events.out.tfevents.1627894298.thebeast.8177.0
lightning_logs/version_4/: events.out.tfevents.1627894473.thebeast.8780.0
lightning_logs/version_5/: events.out.tfevents.1627894538.thebeast.9112.0
mymi/: config.py  types.py  utils.py
mymi/apps/: contour_alignment.ps1  contour_alignment.py  example_session.json  gtv_viewer.py
mymi/augmed/: README.md  utils.py
mymi/benchmarking/: __init__.py  projections.py
mymi/cache/: __init__.py  cache.py  data_cache.py
mymi/checkpoint/: __init__.py  checkpoint.py
mymi/checkpointing/: __init__.py  algorithm.py
mymi/constants/: constants.py
mymi/curve_fitting/: p_init.py  transfer_learning.py
mymi/dataset/: __init__.py  dataset.py  dataset_preprocessor_2d.py  patient_data_extractor.py  patient_plotter.py  types.py
mymi/datasets/: README.md  __init__.py  dataset.py  image_dataset.py  patient.py  region_map.py  regions_map.py  series.py  study.py  test.py
mymi/download/: pacs.py
mymi/evaluation/: __init__.py  dicom.py  model_evaluator.py  predictions.py
mymi/evaluations/: dicom.py  nrrd.py  (+1 more)
scripts/: parotid_left_2d_preprocess  parotid_left_2d_train.slurm  parotid_left_2d_train_node  parotid_left_3d_preprocess  parotid_left_3d_train_node  preprocess  preprocess_2d  preprocess_3d  publish  train  train_2d  train_2d.slurm  train_node_2d
transforms/: 2d-parotid-left.yml
(+2437 files in other folders)
