[project]
name = "MyMI"
version = "0.0.1"
requires-python = "==3.10.11"
dependencies = [
    "augmed",
    "colorlog==6.10.1",
    "dicomset",
    "diffdrr==0.6.0",
    "fairscale==0.4.13",
    "fire==0.7.1",
    "gputil==1.4.0",
    "jupyterlab==4.3.8",
    "nibabel==5.2.1",
    "numpy==2.2.6",
    "opencv-python==4.13.0.92",
    "pandas==2.3.3",
    "pdf2image==1.17.0",
    "pydicom==2.4.4",
    "pynrrd==1.1.3",
    "pytorch_lightning==2.4.0",
    "scikit-image==0.24.0",
    "seaborn==0.13.2",
    "SimpleITK==2.5.3",
    "surface-distance",
    "torch==2.5.1",
    "torchio==0.19.1",
    "unigradicon==1.0.4",
    "wandb==0.25.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
augmed = { path = "../AugMed", editable = true }
dicomset = { path = "../DicomSet", editable = true }
surface-distance = { git = "https://github.com/google-deepmind/surface-distance" }
torch = { index = "pytorch-cu121" }
